--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.1.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "mocha": "^10.7.3"
