--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --watch index.js",
-    "test": "npx mocha index.test.js"
+    "test": "npx mocha index.test.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
